# guile-tjit

./: .dir-locals.el  .gitignore  GUILE-VERSION  Makefile.am  NEWS  acinclude.m4  configure.ac  libguile.h
am/: bootstrap.am  guilec
benchmark-suite/benchmarks/: ports.bm  read.bm  uniform-vector-read.bm
bootstrap/: Makefile.am
build-aux/: git-version-gen
doc/: guile.1
doc/example-smob/: Makefile
doc/ref/: Makefile.am  api-control.texi  api-coverage.texi  api-data.texi  api-debug.texi  api-evaluation.texi  api-foreign.texi  api-io.texi  api-macros.texi  api-memory.texi  api-options.texi  api-peg.texi  api-procedures.texi  compiler.texi  goops.texi  guile-invoke.texi  guile.texi  history.texi  libguile-concepts.texi  libguile-parallel.texi  libguile-smobs.texi  misc-modules.texi  posix.texi  r6rs.texi  scheme-using.texi  srfi-modules.texi  statprof.texi  vm.texi  web.texi
gnulib-local/build-aux/: git-version-gen.diff
guile-readline/: Makefile.am  readline.c
guile-readline/ice-9/: readline.scm
lib/: Makefile.am  accept.c  alignof.h  alloca.in.h  arpa_inet.in.h  asnprintf.c  assure.h  basename-lgpl.c  binary-io.h  bind.c  btowc.c  byteswap.in.h  c-ctype.h  c-strcase.h  c-strcasecmp.c  c-strncasecmp.c  canonicalize-lgpl.c  ceil.c  close.c  config.charset  connect.c  copysign.c  dirent.in.h  dirfd.c  dirname-lgpl.c  dirname.h  dosname.h  dup2.c  duplocale.c  errno.in.h  fcntl.in.h  float+.h  float.c  float.in.h  floor.c  frexp.c  fstat.c  fsync.c  full-read.c  full-read.h  (+140 more)
lib/glthread/: lock.h
libguile/: Makefile.am  __scm.h  _scm.h  alist.c  arbiters.c  array-handle.c  array-handle.h  array-map.c  arrays.c  arrays.h  async.c  async.h  backtrace.c  bdw-gc.h  bitvectors.c  bitvectors.h  boolean.c  bytevectors.c  bytevectors.h  chars.c  continuations.c  continuations.h  control.c  control.h  conv-integer.i.c  debug.c  debug.h  deprecated.c  deprecated.h  deprecation.c  dynl.c  dynstack.c  dynstack.h  dynwind.c  elf.h  eq.c  error.c  error.h  eval.c  evalext.c  (+145 more)
m4/: clock_time.m4  gnulib-cache.m4  gnulib-comp.m4
meta/: Makefile.am  build-env.in  guile-config.in  uninstalled-env.in
module/: Makefile.am  rnrs.scm  statprof.scm
module/ice-9/: boot-9.scm  command-line.scm  compile-psyntax.scm  deprecated.scm  eval-string.scm  eval.scm  local-eval.scm  match.upstream.scm  peg.scm  poll.scm  ports.scm  pretty-print.scm  psyntax-pp.scm  psyntax.scm  save-stack.scm  session.scm  sports.scm  suspendable-ports.scm  textual-ports.scm  threads.scm  weak-vector.scm
module/ice-9/peg/: codegen.scm  match-record.scm  string-peg.scm  using-parsers.scm
module/language/: bytecode.scm  cps.scm  cps2.scm  rtl.scm  tree-il.scm
module/language/assembly/: compile-bytecode.scm  disassemble.scm
module/language/bytecode/: spec.scm
module/language/cps/: arities.scm  closure-conversion.scm  compile-bytecode.scm  compile-rtl.scm  constructors.scm  contification.scm  cse.scm  dce.scm  dfg.scm  effects-analysis.scm  elide-values.scm  intmap.scm  intset.scm  nameset.scm  optimize.scm  primitives.scm  prune-bailouts.scm  prune-top-level-scopes.scm  reify-primitives.scm  renumber.scm  rotate-loops.scm  self-references.scm  simplify.scm  simplify2.scm  slot-allocation.scm  spec.scm  specialize-numbers.scm  specialize-primcalls.scm  type-fold.scm  types.scm  utils.scm  verify.scm
module/language/cps2/: closure-conversion.scm  compile-bytecode.scm  compile-cps.scm  constructors.scm  contification.scm  cse.scm  dce.scm  effects-analysis.scm  elide-values.scm  optimize.scm  prune-bailouts.scm  prune-top-level-scopes.scm  reify-primitives.scm  renumber.scm  self-references.scm  simplify.scm  slot-allocation.scm  spec.scm  specialize-primcalls.scm  split-rec.scm  type-fold.scm  types.scm  utils.scm  verify.scm  with-cps.scm
module/language/ecmascript/: compile-tree-il.scm
module/language/elisp/: bindings.scm  boot.el  compile-tree-il.scm  lexer.scm  runtime.scm
module/language/objcode/: elf.scm  spec.scm
module/language/rtl/: spec.scm
module/language/scheme/: decompile-tree-il.scm
module/oop/: goops.scm
module/rnrs/: hashtables.scm
module/scripts/: compile.scm  disassemble.scm
module/srfi/: srfi-1.scm  srfi-18.scm  srfi-9.scm
module/system/: foreign-object.scm  foreign.scm  xref.scm
module/web/: client.scm  http.scm  request.scm  server.scm  uri.scm
prebuilt/: Makefile.am
prebuilt/mips-unknown-linux-gnu/: Makefile.am
test-suite/: Makefile.am  guile-test
test-suite/standalone/: Makefile.am  test-num2integral.c  test-out-of-memory  test-scm-c-read.c  test-scm-spawn-thread.c  test-stack-overflow
test-suite/test-suite/: lib.scm
test-suite/tests/: 00-socket.test  arrays.test  asm-to-bytecode.test  bytevectors.test  chars.test  compiler.test  control.test  coverage.test  cross-compilation.test  cse.test  dwarf.test  ecmascript.test  elisp-compiler.test  eval.test  foreign.test  goops.test  iconv.test  linker.test  modules.test  peg.bench  peg.test  peval.test  ports.test  print.test  procprop.test  r5rs_pitfall.test  r6rs-arithmetic-fixnums.test  r6rs-hashtables.test  r6rs-ports.test  r6rs-records-syntactic.test  ramap.test  random.test  rdelim.test  reader.test  regexp.test  rnrs-libraries.test  rtl-compilation.test  rtl.test  session.test  signals.test  (+19 more)
test-suite/tjit/: Makefile.am  dynamic-input.txt  run-tjit-tests.scm  t-add-01.scm  t-add-02.scm  t-add-03.scm  t-add-04.scm  t-add-immediate-01.scm  t-args-05.scm  t-args-07.scm  t-args-09.scm  t-assign-01.scm  t-bind-rest-01.scm  t-bind-rest-02.scm  t-bind-rest-03.scm  t-box-01.scm  t-box-02.scm  t-box-03.scm  t-box-04.scm  t-br-if-=-01.scm  t-br-if-char-01.scm  t-br-if-eq-01.scm  t-br-if-eq-02.scm  t-br-if-eqv-01.scm  t-br-if-eqv-02.scm  t-br-if-le-01.scm  t-br-if-le-02.scm  t-br-if-logtest-01.scm  t-br-if-lt-01.scm  t-br-if-lt-02.scm  t-br-if-lt-03.scm  t-br-if-nargs-lt-01.scm  t-br-if-nargs-ne-01.scm  t-br-if-null-01.scm  t-br-if-null-02.scm  t-br-if-pair-01.scm  t-br-if-struct-01.scm  t-br-if-tc7-01.scm  t-br-if-true-01.scm  t-br-if-u64-=-scm-01.scm  (+262 more)
test-suite/vm/: run-vm-tests.scm
(+137 files in other folders)
